fix: :bug: firefox desktop hero bg alignment

--- a/src/components/HomepageHero/styles.module.scss
+++ b/src/components/HomepageHero/styles.module.scss
@@ -65,7 +65,8 @@
     }
 
     @media only screen and (min-width: 996px) {
-        display: block;
+        display: flex;
+        justify-content: flex-end;
     }
 }
 
